--- a/Filtering_EDA.ipynb
+++ b/Filtering_EDA.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "61313e2c-b90e-4fdc-b9d1-04b1e0251405",
+   "metadata": {},
+   "source": [
+    "## Data Source: AIDS Clinical Trials Group Study 175 (UC Irvine Machine Learning Repository)<br>\n",
+    "https://archive.ics.uci.edu/dataset/890/aids+clinical+trials+group+study+175"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "742d19a2-be1b-418f-80c7-03c31bfee77d",
@@ -260,11 +269,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6786e373-41ea-45ca-9564-283071d69ab5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bc45ba62b52e44ae9b3c5befd2a3c0a9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='column', options=('cd40', 'cd420', 'cd80', 'cd820'), value='cd40')…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@interact\n",
+    "def filter_wtkg(column=['cd40', 'cd420', 'cd80', 'cd820'], threshold=375):\n",
+    "    return X.loc[X[column] > threshold]"
+   ]
   }
  ],
  "metadata": {
